# cpr-assist

./: LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  institutional.py  reports.py  sessions.py
backend/app/core/: bundle_path.py  config.py  gpu_policy.py  security.py
backend/app/db/: mongo.py
backend/app/schemas/: auth.py  ml.py  session.py
backend/app/services/: audit_service.py  cpr_config.py  harness_registry.py  inference.py
backend/scripts/: reset_mongodb.py  seed_demo_data.py
backend/tests/: conftest.py  test_harness_registry.py  test_integration_vision_config.py
experiment_reports/: README.md
experiment_reports/01_s0_rgb_classifier_cpr_dataset_s0_14class/: README.md
experiment_reports/01_s0_rgb_classifier_cpr_dataset_s0_14class/recorded_outputs/: classification_report_test.txt  classification_report_val.txt  history.json  test_metrics.json
experiment_reports/02_ct_depth_tabular_track_a_ridge_frozen_v1/: README.md
experiment_reports/02_ct_depth_tabular_track_a_ridge_frozen_v1/recorded_outputs/: FROZEN_BASELINE.json  comparison_all_runs.md  metrics_sklearn_run_20260404_055703_utc.json  settled_model.json
experiment_reports/03_pose_compare_yolov8n_pose_torchvision_keypoint_rcnn/: README.md
experiments/ct_depth_tabular/: EXPERIMENT.md  SETTLED_MODEL.md
experiments/pose_backend_compare/: EXPERIMENT.md  README.md
infra/vps/: bootstrap.sh
scripts/: sync_cpr_ml_from_monorepo.ps1  sync_cpr_ml_from_monorepo.sh
(+36 files in other folders)
